--- a/app.json
+++ b/app.json
@@ -6,15 +6,15 @@
   "env": {
      "BOT_TOKEN": {
       "description": "Your Bot token from @Botfather",
-      "value": ""
+      "value": "5779024488:AAGrkopurWWwLz9WvXKEoe3GOwqbGek0euk"
     },
     "API_ID": {
       "description": "Your API_ID from https://my.telegram.org/apps ",
-      "value": ""
+      "value": "15307152"
     },
     "API_HASH": {
       "description": "Your API_HASH from https://my.telegram.org/apps",
-      "value": ""
+      "value": "8c282dd0d65c1c9b8194c8e507214a29"
     }
    },
    "buildpacks": [
